# TripWire

./: .env.example  .gitignore  ABOUT.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  dev_server.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: API-REFERENCE.md  API.md  ARCHITECTURE.md  AUDIT_FINDINGS.md  CHANGELOG.md  DEPLOYMENT.md  DEVELOPMENT.md  IMPLEMENTATION_SPECS.md  LANDING-PAGE-SPEC.md  MCP-SERVER.md  OPERATIONS.md  SECURITY.md  SKILL-SPEC.md  TEAM-UPDATE.md  V1_STATUS.md  WEBHOOKS.md
docs/_archive/: API.md  ARCHITECTURE.md  AUDIT_FINDINGS.md  SECURITY.md  V1_STATUS.md  WEBHOOKS.md
docs/_archive/api-reference/: webhook-payload.md
docs/_archive/architecture/: ARCHITECTURE_DETAILED.md  overview.md
docs/_archive/guides/: getting-started.md  webhook-verification.md
docs/_archive/sdk/: python-sdk.md
docs/api-reference/: endpoints.md  webhook-payload.md
docs/architecture/: ARCHITECTURE_DETAILED.md  overview.md
docs/guides/: configuration.md  deployment.md  getting-started.md  goldsky-setup.md  webhook-verification.md
docs/sdk/: python-sdk.md
monitoring/: docker-compose.monitoring.yml
monitoring/grafana/dashboards/: tripwire-overview.json
monitoring/prometheus/: alerts.yml  prometheus.yml
sdk/: README.md  pyproject.toml
sdk/examples/: quickstart.py  webhook_handler.py  x402_payment.py
sdk/tripwire_sdk/: __init__.py  client.py  errors.py  signer.py  types.py  verify.py
tests/: _wallet_helpers.py  conftest.py  test_decoder.py  test_dispatcher.py  test_execution_state.py  test_finality.py  test_key_rotation.py  test_middleware.py  test_monitoring.py  test_nonce_repo.py  test_ownership.py  test_policy_engine.py  test_processor.py  test_ratelimit.py  test_routes.py  test_wallet_auth.py
tests/integration/: test_pipeline.py
tripwire/: __init__.py  cache.py  main.py  rpc.py  worker.py
tripwire/api/: __init__.py  app.py  auth.py  middleware.py  ratelimit.py  redis.py  validation.py
tripwire/api/policies/: engine.py
tripwire/api/routes/: __init__.py  auth.py  deliveries.py  endpoints.py  events.py  facilitator.py  ingest.py  session.py  stats.py  subscriptions.py  well_known.py
tripwire/auth/: siwe.py
tripwire/config/: logging.py  settings.py
tripwire/db/: __init__.py  archival.py  client.py  postgres.py
tripwire/db/migrations/: 001_initial.sql  002_add_event_type_data.sql  003_realtime_events.sql  004_add_endpoint_id_to_events.sql  005_api_key_index.sql  006_svix_ids.sql  007_key_rotation.sql  (+21 more)
tripwire/identity/: __init__.py  reputation.py  resolver.py
tripwire/ingestion/: __init__.py  decoder.py  dlq_consumer.py  event_bus.py  filter_engine.py  finality.py  finality_poller.py  generic_decoder.py  pipeline.py  processor.py  trigger_worker.py  ttl_sweeper.py  ws_subscriber.py
tripwire/mcp/: __init__.py  auth.py  protocols.py  server.py  tools.py  types.py
tripwire/notify/: realtime.py
tripwire/observability/: __init__.py  audit.py  error_tracking.py  health.py  metrics.py  tracing.py
tripwire/session/: __init__.py  manager.py
tripwire/types/: models.py
tripwire/utils/: caip.py  topic.py
tripwire/webhook/: __init__.py  convoy_client.py  dispatcher.py  dlq_handler.py  payload.py  provider.py  svix_client.py  verify.py
(+17 files in other folders)
