[project]
name = "tripwire"
dynamic = ["version"]
description = "x402 Execution Middleware — Stripe Webhooks for x402"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "supabase>=2.12.0",
    "httpx>=0.28.0",
    "eth-abi>=5.1.0",
    "eth-account>=0.13.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    "nanoid>=2.0.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.version]
path = "tripwire/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
